bin/tests/errors/parser/parser_err_global_skip_missing_arg.swg
#global skip                         // swc-expected-error {{parser_err_unexpected_token}}
func A() {}
